--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-ejs-layouts": "^2.3.1",
+    "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "install": "^0.10.2",
